--- a/index.html
+++ b/index.html
@@ -1,11 +1,76 @@
+
 <!DOCTYPE html>
-<html>
-    <head>
-        <script src="latest.js"></script>
-        <script src="app.js"></script> 
-    </head>
-    <body>
-        <video height="300" id="localVideo"></video>
-        <div id="remotesVideos"></div>
-    </body>
+<html lang="en" ng-app="gossipyApp">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="shortcut icon" href="favicon.png">
+
+    <title>Gossipy</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/flat-ui.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/bootstrap-switch.css">
+
+    <!-- Custom styles for this template -->
+    <link href="css/custom.css" rel="stylesheet">
+
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+    <![endif]-->
+  </head>
+
+  <body>
+
+    <!-- Wrap all page content here -->
+    <div id="wrap">
+      <!-- Begin page content -->
+      <div class="container" ng-controller="MainCntrl">
+		<div class="row">
+			<div class="controls-container">
+
+				<div class="make-switch switch-large" data-label-icon="fui-video-24" data-on="success" data-off="danger" data-on-label="ON" data-off-label="OFF">
+    				<input type="checkbox" ng-model="videoshow" id="videoswitch">
+				</div>
+				<hr>
+				<div class="make-switch switch-large" data-label-icon="fui-volume-24" data-on="success" data-off="danger" data-on-label="ON" data-off-label="OFF" id="audioswitch">
+    			<input type="checkbox">
+				</div>
+				<hr>
+				<input type="range" min="0" max="1" ng-model="volume" step="0.1">
+				<input type="checkbox" ng-model="videoshow">
+
+			</div>
+			<div class="brand-container"></div>
+			
+			<video class="col-md-7 video-container centerify" id="myVideo" ng-show="videoshow">
+			</video>
+			<img src="img/loader.gif" alt="" ng-show="!(videoshow)">
+			
+		</div>
+      </div>
+    </div>
+
+    <div id="footer">
+      <div class="container">
+        <p class="text-muted credit">Made with &hearts; by Sanket and Abhishek</p>
+      </div>
+    </div>
+
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="js/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/bootstrap-switch.js"></script>
+    <script src="js/angular.min.js"></script>
+    <script src="js/app.js"></script>
+  </body>
 </html>
